# goemon-cli

./: .gitignore  README.md  setup.cfg
goemon/: api.py  cli.py
