[metadata]
name = goemon-cli
version = 0.0.1-pre
description = GO-E-MON CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = yacchin1205
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests >= 2.18.0

[options.entry_points]
console_scripts =
    goemon = goemon.cli:main
